<resources>
    <string name="app_name">My Contact List</string>
    <string name="welcome">Welcome to Your Contact List!</string>
    <string name="new_contact">New Contact</string>
    <string name="list_contacts">List All Contacts</string>
    <string name="my_contact">My Contact</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="Signup">Signup</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="keep_logged">Keep me logged in</string>
    <string name="logout">Logout</string>
    <string name="blank_fields">Email or password should not be left blank</string>
    <string name="about_my_contact_list">About My Contact List</string>
    <string name="names">Names</string>
    <string name="rm">Matricula</string>
    <string name="developerNameAna" translatable="false">Ana Carla Brasil</string>
    <string name="developerNameEdson" translatable="false">Edson Raimundo Júnior</string>
    <string name="developerNameHugo" translatable="false">Hugo Ohnishi Destito</string>
    <string name="developerNameRichel" translatable="false">Richel Sensineli</string>
    <string name="about">About</string>
    <string name="contact_deleted">Contact Successfully Deleted</string>
    <string name="failed_delete">Failed to Delete Contact</string>
    <string name="contact_saved">Contact Successfully Saved</string>
    <string name="failed_save">Failed to Save Contact</string>
    <string name="contact_updated">Contact Successfully Updated</string>
    <string name="failed_update">Failed to Update Contact</string>
    <string name="failed_load">Failed to Load the Contacts</string>
    <string name="account_created">Account Successfully created!"</string>
    <string name="no_contacts">You Don\'t Have Contacts Saved!</string>

</resources>
