<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".form.NewContactActivity">

    <TextView
            android:text="@string/new_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNewContact" android:layout_marginTop="72dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:gravity="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNewContact"
            app:layout_constraintStart_toStartOf="@+id/tvNewContact"
            app:layout_constraintEnd_toEndOf="@+id/tvNewContact" app:layout_constraintHorizontal_bias="0.522"
            android:hint="@string/name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etContactPhone"
            app:layout_constraintStart_toStartOf="@+id/etName" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            app:layout_constraintEnd_toEndOf="@+id/etName" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/phone"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNomeSignup"
            app:layout_constraintStart_toStartOf="@+id/etContactPhone" app:layout_constraintEnd_toEndOf="@+id/etContactPhone"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/etContactPhone"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/email"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSave" android:layout_marginTop="128dp"
            app:layout_constraintTop_toBottomOf="@+id/etNomeSignup" app:layout_constraintStart_toStartOf="@+id/etNomeSignup"
            app:layout_constraintEnd_toEndOf="@+id/etNomeSignup" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>