<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".form.ContactActivity">

    <TextView
            android:id="@+id/tvContactName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_item"
            android:gravity="center"
            android:hint="@string/hint_name"
            app:layout_constraintEnd_toEndOf="@+id/tvMyContacts"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvMyContacts"
            app:layout_constraintTop_toBottomOf="@+id/tvMyContacts" />

    <TextView
            android:id="@+id/tvContactPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_item"
            android:gravity="center"
            android:hint="@string/hint_phone"
            app:layout_constraintEnd_toEndOf="@+id/tvContactName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvContactName"
            app:layout_constraintTop_toBottomOf="@+id/tvContactName" />

    <TextView
            android:id="@+id/tvContactEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_item"
            android:gravity="center"
            android:hint="@string/hint_email"
            app:layout_constraintEnd_toEndOf="@+id/tvContactPhone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvContactPhone"
            app:layout_constraintTop_toBottomOf="@+id/tvContactPhone" />

    <Button
            android:id="@+id/btUpdateContact"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/botao_customizado"
            android:text="@string/update"
            app:layout_constraintEnd_toStartOf="@+id/btDeleteContact"
            app:layout_constraintStart_toStartOf="@+id/tvContactEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvContactEmail"
            tools:text="@string/update" />

    <Button
            android:id="@+id/btDeleteContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:background="@drawable/botao_customizado"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="@+id/tvContactEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvContactEmail" />

    <TextView
            android:id="@+id/tvMyContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/my_contact" />
</androidx.constraintlayout.widget.ConstraintLayout>