<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signup.SignupActivity">

    <Button
            android:id="@+id/btSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/botao_customizado"
            android:text="@string/Signup"
            app:layout_constraintEnd_toEndOf="@+id/etPhoneSignup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etPhoneSignup"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneSignup" />

    <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/Signup"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/etNomeSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tvSignUp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvSignUp"
            app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

    <EditText
            android:id="@+id/etEmailSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textPersonName"

            app:layout_constraintEnd_toEndOf="@+id/etNomeSignup"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/etNomeSignup"
            app:layout_constraintTop_toBottomOf="@+id/etNomeSignup" />

    <EditText
            android:id="@+id/etPhoneSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/hint_phone"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordSignup"
            app:layout_constraintStart_toStartOf="@+id/etPasswordSignup"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordSignup" />

    <EditText
            android:id="@+id/etPasswordSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/etEmailSignup"
            app:layout_constraintStart_toStartOf="@+id/etEmailSignup"
            app:layout_constraintTop_toBottomOf="@+id/etEmailSignup" />
</androidx.constraintlayout.widget.ConstraintLayout>