<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp" android:id="@+id/textView"
            android:gravity="center" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/new_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btNewContact" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/btListAll" app:layout_constraintEnd_toEndOf="@+id/btListAll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/list_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btListAll" android:layout_marginTop="144dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:gravity="center"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>