<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <TextView
            android:id="@+id/tvAbout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:gravity="center"
            android:text="@string/about_my_contact_list"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:text="@string/names"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvRM"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAbout" />

    <TextView
            android:id="@+id/tvRM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="156dp"
            android:text="@string/rm"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAbout" />

    <TextView
            android:id="@+id/tvNameAna"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="Ana"
            app:layout_constraintEnd_toStartOf="@+id/tvRMAna"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
            android:id="@+id/tvNameEdson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="Edson"
            app:layout_constraintEnd_toStartOf="@+id/tvRMEdson"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameAna" />

    <TextView
            android:id="@+id/tvNameHugo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="Hugo"
            app:layout_constraintEnd_toStartOf="@+id/tvRMHugo"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameEdson" />

    <TextView
            android:id="@+id/tvNameRichel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="Richel"
            app:layout_constraintEnd_toStartOf="@+id/tvRMRichel"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameHugo" />

    <TextView
            android:id="@+id/tvRMAna"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="144dp"
            android:text="334056"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRM" />

    <TextView
            android:id="@+id/tvRMEdson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="144dp"
            android:text="333819"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRMAna" />

    <TextView
            android:id="@+id/tvRMHugo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="144dp"
            android:text="333823"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRMEdson" />

    <TextView
            android:id="@+id/tvRMRichel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="144dp"
            android:text="333805"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRMHugo" />
</androidx.constraintlayout.widget.ConstraintLayout>